aportar, urlsy ya

--- a/backend/templates/test.html
+++ b/backend/templates/test.html
@@ -9,6 +9,12 @@
 			.error{
 				color: red;
 			}
+
+			.big-input{
+				border: 1px solid black;
+				width: 30%;
+				height: 100px;
+			}
 		</style>
 		
 	</head>
