--- a/backend/templates/planer/planer_hotels.html
+++ b/backend/templates/planer/planer_hotels.html
@@ -89,7 +89,7 @@ presupuesto, Disfruta de la mejor economia de la zona cafera del Antioquia.</p>
 <span>20.000</span>
 
 <span style="margin-left:295px;">200.000</span>
-      <input type="range">
+      <input type="range" min=20.000 max=200.000>
 
 </div>
   
