--- a/backend/templates/sevices/detail_service.html
+++ b/backend/templates/sevices/detail_service.html
@@ -19,39 +19,15 @@
         <script type="text/javascript" src="/statics/js/SitiosInteres.js"></script>
 <!--css-->
   <link rel="stylesheet" href="/statics/css/style_servicies.css">
+</head>
+
+{% block nav %}{%endblock%}
 
 
- <header id="yo" class="Header">
-            <nav class="MainMenu-hoteles">
-                <ul class="MainMenu-list">
-                <liclass="MainMenu-item">
-
-                <a class="MainMenu-link" href="hispania.html">volver</a>
-                </li>
-                    <li class="MainMenu-item">
-                        <a class="MainMenu-link" href="#">¿Quiero Aportar?</a>
-                    </li>
-                    <li class="MainMenu-item">
-                        <a class="MainMenu-link" href="actividades-hispania.html">Actividades</a>
-                    </li>
-                    <li class="MainMenu-item">
-                        <a class="MainMenu-link" href="#contacto">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
-            <figure class="Header-imageContainer">
-                <a href="index.html"><img src="img/descansoicon.jpg" alt="Imagen personal" class="Header-image"/></a>
-                <figcaption class="Header-imageDescription">
-                    <a class="Header-link">@Andalucía</a>
-                </figcaption>
-            </figure>
-        </header>
+{% block header %}{%endblock%}
 
 
-
-      {% block header %}{% endblock %}
-      {% block content %}{% endblock %}
-
+{% block content %}{%endblock%}
 
 
 
