--- a/backend/templates/sevices/list_services.html
+++ b/backend/templates/sevices/list_services.html
@@ -20,25 +20,7 @@
   <link rel="stylesheet" href="/static/css/style_services.css">
 
 
-
-<nav class="MainMenu-hoteles">
-                <ul class="MainMenu-list">
-                <liclass="MainMenu-item">
-
-                <a class="MainMenu-link" href="hispania.html">volver</a>
-                </li>
-                    <li class="MainMenu-item">
-                        <a class="MainMenu-link" href="#">¿Quiero Aportar?</a>
-                    </li>
-                    <li class="MainMenu-item">
-                        <a class="MainMenu-link" href="actividades-hispania.html">Actividades</a>
-                    </li>
-                    <li class="MainMenu-item">
-                        <a class="MainMenu-link" href="#contacto">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
-
+        {% block nav %}{%endblock%}
         {% block header %}{%endblock%}
          {% block container %}{%endblock%}
 
