--- a/backend/templates/sevices/new.html
+++ b/backend/templates/sevices/new.html
@@ -22,7 +22,7 @@
             <figure class="Header-imageContainer">
                 <a href="/"><img src="/static/img/profil.png" alt="Imagen profil" class="Header-image"/></a>
                 <figcaption class="Header-imageDescription">
-                    <a class="Header-link">@JuanPabloArango</a>
+                    <a class="Header-link">@JuanPablo_Arango</a>
                 </figcaption>
             </figure>
         </header>
