--- a/backend/templates/hotels/detail_hotel.html
+++ b/backend/templates/hotels/detail_hotel.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-    <head>
-        <title>rutas naturales municipios hispania Antioquia</title>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="css/estilos-natural.ciclo.css">
-
-            <!--js-->
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-        <script type="text/javascript" src="js/Hispania-cicla.js"></script>
-        <script type="text/javascript" src="js/SitiosInteres.js"></script>
+{% extends "sevices/list_services.html"%}
 
 
-        <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+{% block titiel %}rutas naturales hoteles  hispania Antioquia{% endblock %}
 
-    </head>
-    <body>
-        <header id="yo" class="Header">
-            <nav class="MainMenu-hoteles">
+
+
+
+{% block nav %}
+    <nav class="MainMenu-hoteles">
                 <ul class="MainMenu-list">
                 <liclass="MainMenu-item">
 
@@ -33,6 +24,10 @@
                     </li>
                 </ul>
             </nav>
+{%endblock%}
+{% block header %}
+ <header id="yo" class="Header">
+            
             <figure class="Header-imageContainer">
                 <a href="index.html"><img src="img/descansoicon.jpg" alt="Imagen personal" class="Header-image"/></a>
                 <figcaption class="Header-imageDescription">
@@ -40,10 +35,11 @@
                 </figcaption>
             </figure>
         </header>
-                  
-            
+{% endblock %}
 
-        
+
+{% block content %}
+<body>
         <section id="container">
             <h2 class="Work-title u-title"></h2>
 
@@ -88,15 +84,16 @@
                 </article>
             </article>
         </section>
+</body>
+
+{% endblock %}
 
 
 
 
 
-        <footer id="contacto" class="Footer">
-            
-            <label>ayudanos a seguir creciendo</label>
-                <input type="text" placeho  lder="email">
-        </footer>
-    </body>
-</html>
+
+
+                  
+        
+      
