--- a/backend/templates/places/new.html
+++ b/backend/templates/places/new.html
@@ -33,7 +33,7 @@
 
 <!--aqui va el formulario-->
 	
-	<form method="POST">
+	<form action="/nuevo/" method="POST">
 	{% csrf_token %} 
 	{% for input in form %}
 
