--- a/backend/static/css/style_services.css
+++ b/backend/static/css/style_services.css
@@ -204,6 +204,9 @@ display: inline-block;
     background: #00963a;  
     text-align: center;
     padding: 1em 0;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
 }
 
 .Footer-left{
