--- a/backend/templates/hotels/detail_hotel.html
+++ b/backend/templates/hotels/detail_hotel.html
@@ -1,4 +1,4 @@
-{% extends "sevices/list_services.html"%}
+{% extends "sevices/detail_services.html"%}
 
 
 {% block titiel %}rutas naturales hoteles  hispania Antioquia{% endblock %}
