--- a/backend/templates/hotels/list_hotels.html
+++ b/backend/templates/hotels/list_hotels.html
@@ -4,8 +4,9 @@
 {% block titiel %}rutas naturales hoteles  hispania Antioquia{% endblock %}
 
 
-{% block header %}
+{% block nav %}{% endblock %}
 
+{% block header %}
 <header id="yo" class="Header">
             
             <figure class="Header-imageContainer">
