--- a/backend/templates/landings/index.html
+++ b/backend/templates/landings/index.html
@@ -1,7 +1,7 @@
 
 {% extends "landings/master.html" %}
 
- {% block title %}Inicio{% endblock %}
+ {% block title %}aqui esta lo mejor de los municipios de antioquia{% endblock %}
   
 
 <!-- --------------------!Contaier1!------------------ -->
@@ -12,7 +12,6 @@
         <h1>
             <span>
             &nbsp;Aqui esta lo que los Mapas&nbsp;
-            <br>
              &nbsp; no pueden Describir &nbsp;
             </span>
         </h1>
