--- a/backend/static/css/elements.css
+++ b/backend/static/css/elements.css
@@ -105,7 +105,12 @@ font-size:20px;
 cursor:pointer;
 border-radius: 5px;
 }
+div .style{
 
+width:500px;
+height: 500px;
+background: red;
+}
 
 form button{
 width:10%;
